fix scan result being cut off

--- a/src/components/ScanResult/ScanResultList/ScanResultList.css
+++ b/src/components/ScanResult/ScanResultList/ScanResultList.css
@@ -16,6 +16,6 @@
 
 #ScanResultSelection {
     width: 100%;
-    height: 100%;
+    height: 89%;
 }
 
